--- a/_locales/zh/ringbitcar-strings.json
+++ b/_locales/zh/ringbitcar-strings.json
@@ -1,4 +1,5 @@
 {
+    "RingbitCar|block": "迷你小车",
     "RingbitCar.init_wheel|block":"设置左轮连接 %left|右轮连接 %right",
     "RingbitCar.forward|block":"全速前进",
     "RingbitCar.back|block":"全速后退",
