--- a/_locales/zh/ringbitcar-strings.json
+++ b/_locales/zh/ringbitcar-strings.json
@@ -1,13 +1,17 @@
 {
     "RingbitCar|block": "迷你小车",
-    "RingbitCar.init_wheel|block":"设置左轮连接 %left|右轮连接 %right",
-    "RingbitCar.forward|block":"全速前进",
-    "RingbitCar.back|block":"全速后退",
-    "RingbitCar.turnleft|block":"全速左转",
-    "RingbitCar.turnright|block":"全速右转",
-    "RingbitCar.brake|block":"刹车",
-    "RingbitCar.freestyle|block":"设置左轮速度为 %m| 右轮速度为 %n",
-    "RingbitCar.tracking|block":"巡线头状态为 %state",
-    "RingbitCar.ringbitcar_sonarbit|block":"超声波测距值 %distance_unit"
+    "RingbitCar.TrackingStateType.Tracking_State_0|block": "● ●",
+    "RingbitCar.TrackingStateType.Tracking_State_1|block": "● ◌",
+    "RingbitCar.TrackingStateType.Tracking_State_2|block": "◌ ●",
+    "RingbitCar.TrackingStateType.Tracking_State_3|block": "◌ ◌",
+    "RingbitCar.init_wheel|block": "设置左轮连接 %left|右轮连接 %right",
+    "RingbitCar.forward|block": "全速前进",
+    "RingbitCar.back|block": "全速后退",
+    "RingbitCar.turnleft|block": "全速左转",
+    "RingbitCar.turnright|block": "全速右转",
+    "RingbitCar.brake|block": "刹车",
+    "RingbitCar.freestyle|block": "设置左轮速度为 %m| 右轮速度为 %n",
+    "RingbitCar.tracking|block": "巡线头状态为 %state",
+    "RingbitCar.ringbitcar_sonarbit|block": "超声波测距值 %distance_unit"
     
 }
