--- a/_locales/zh/ringbitcar-strings.json
+++ b/_locales/zh/ringbitcar-strings.json
@@ -4,6 +4,9 @@
     "RingbitCar.TrackingStateType.Tracking_State_1|block": "● ◌",
     "RingbitCar.TrackingStateType.Tracking_State_2|block": "◌ ●",
     "RingbitCar.TrackingStateType.Tracking_State_3|block": "◌ ◌",
+    "RingbitCar.Distance_Unit.Distance_Unit_mm|block": "mm",
+    "RingbitCar.Distance_Unit.Distance_Unit_cm|block": "cm",
+    "RingbitCar.Distance_Unit.Distance_Unit_inch|block": "inch",
     "RingbitCar.init_wheel|block": "设置左轮连接 %left|右轮连接 %right",
     "RingbitCar.forward|block": "全速前进",
     "RingbitCar.back|block": "全速后退",
