--- a/_locales/zh-cn/RingbitCar-strings.json
+++ b/_locales/zh-cn/RingbitCar-strings.json
@@ -1,5 +1,5 @@
 {
-    "ringbitcar|block": "迷你小车",
+    "ringbitcar|block": "RingbitCar",
     "ringbitcar.init_wheel|block": "设置左轮连接 %left|右轮连接 %right",
     "ringbitcar.forward|block": "全速前进",
     "ringbitcar.back|block": "全速后退",
