--- a/_locales/ja/RingbitCar-strings.json
+++ b/_locales/ja/RingbitCar-strings.json
@@ -1,13 +1,13 @@
 {
-    "ringbitcar|block": "RingbitCar",
-    "ringbitcar.init_wheel|block": "左の車輪を設置する %left|右の車輪を設置する %right",
-    "ringbitcar.forward|block": "急速な前進",
-    "ringbitcar.back|block": "急速な後ろ向き",
-    "ringbitcar.turnleft|block": "左へ曲がる",
-    "ringbitcar.turnright|block": "右へ曲がる",
-    "ringbitcar.brake|block": "停車",
-    "ringbitcar.freestyle|block": "左の速度を設置する %m| 右の速度を設置する %n",
-    "ringbitcar.tracking|block": "パトロールヘッドを設置%state",
-    "ringbitcar.ringbitcar_sonarbit|block": "超音波測距 %distance_unit"
+    "RingbitCar|block": "RingbitCar",
+    "RingbitCar.init_wheel|block": "左の車輪を設置する %left|右の車輪を設置する %right",
+    "RingbitCar.forward|block": "急速な前進",
+    "RingbitCar.back|block": "急速な後ろ向き",
+    "RingbitCar.turnleft|block": "左へ曲がる",
+    "RingbitCar.turnright|block": "右へ曲がる",
+    "RingbitCar.brake|block": "停車",
+    "RingbitCar.freestyle|block": "左の速度を設置する %m| 右の速度を設置する %n",
+    "RingbitCar.tracking|block": "パトロールヘッドを設置%state",
+    "RingbitCar.ringbitcar_sonarbit|block": "超音波測距 %distance_unit"
     
 }
