French translation v2, typos correction

--- a/_locales/fr/RingbitCar-strings.json
+++ b/_locales/fr/RingbitCar-strings.json
@@ -1,20 +1,20 @@
 {
   "RingbitCar.Distance_Unit.Distance_Unit_cm|block": "cm",
-  "RingbitCar.Distance_Unit.Distance_Unit_inch|block": "pouces",
+  "RingbitCar.Distance_Unit.Distance_Unit_inch|block": "pouce",
   "RingbitCar.Distance_Unit.Distance_Unit_mm|block": "mm",
   "RingbitCar.TrackingStateType.Tracking_State_0|block": "● ●",
   "RingbitCar.TrackingStateType.Tracking_State_1|block": "● ◌",
   "RingbitCar.TrackingStateType.Tracking_State_2|block": "◌ ●",
   "RingbitCar.TrackingStateType.Tracking_State_3|block": "◌ ◌",
-  "RingbitCar.back|block": "recule à pleine vitesse",
-  "RingbitCar.brake|block": "arrêt",
-  "RingbitCar.forward|block": "aller droit à pleine vitesse",
-  "RingbitCar.freestyle|block": "régle la vitesse de la roue gauche à %m| rêgle la vitesse de la roue droite à %n",
-  "RingbitCar.init_wheel|block": "fixe la roue gauche à la broche %left| fixe la roue droite à la broche %right",
-  "RingbitCar.ringbitcar_sonarbit|block": "obtenir la distance en %distance_unit",
+  "RingbitCar.back|block": "reculer à pleine vitesse",
+  "RingbitCar.brake|block": "freiner",
+  "RingbitCar.forward|block": "avancer à pleine vitesse",
+  "RingbitCar.freestyle|block": "régler vitesse roue gauche à %m| et roue droite à %n",
+  "RingbitCar.init_wheel|block": "assigner roue gauche à broche %left| et roue droite à broche %right",
+  "RingbitCar.ringbitcar_sonarbit|block": "calculer distance en %distance_unit",
   "RingbitCar.tracking|block": "l'état actuel est %state",
-  "RingbitCar.turnleft|block": "tourne gauche à pleine vitesse",
-  "RingbitCar.turnright|block": "tourne droite à pleine vitesse",
+  "RingbitCar.turnleft|block": "tourner à gauche à pleine vitesse",
+  "RingbitCar.turnright|block": "tourne à droite à pleine vitesse",
   "RingbitCar|block": "RingbitCar",
   "{id:category}RingbitCar": "RingbitCar"
 }
