--- a/_locales/fr/RingbitCar-jsdoc-strings.json
+++ b/_locales/fr/RingbitCar-jsdoc-strings.json
@@ -1,16 +1,16 @@
 {
-	"RingbitCar": "Utilisez ce fichier pour définir des fonctions et des blocs personnalisés.\nLire la suite sur https://makecode.microbit.org/blocks/custom",
-  "RingbitCar.back": "À faire: recule à pleine vitesse",
-  "RingbitCar.brake": "À faire: arrêt",
-  "RingbitCar.forward": "À faire: avance à tout vitesse",
-  "RingbitCar.freestyle": "À faire: vitesse regulé automatiquement",
-  "RingbitCar.freestyle|param|m": "fixe m de -100 (min) à 100 (max), example:0",
-  "RingbitCar.freestyle|param|n": "fixe n de -100 (min) à 100 (max), example:0",
-  "RingbitCar.init_wheel": "À faire: initialisation de la voiture  ring:bit",
-  "RingbitCar.init_wheel|param|left": "ici, décrire un paramètre, example: AnalogPin.P1",
-  "RingbitCar.init_wheel|param|right": "ici, décrire un paramètre, example: AnalogPin.P2",
-  "RingbitCar.ringbitcar_sonarbit": "À faire: obtenir la distance",
-  "RingbitCar.tracking": "À faire: suiveur de ligne",
-  "RingbitCar.turnleft": "À faire: tourne à gauche à pleine vitesse",
-  "RingbitCar.turnright": "À faire: tourne à droite à pleine vitesse"
+	"RingbitCar": "Utilisez ce fichier pour définir les fonctions et les blocs.\nLire la suite sur https://makecode.microbit.org/blocks/custom.",
+  "RingbitCar.back": "Recule à pleine vitesse.",
+  "RingbitCar.brake": "Freine.",
+  "RingbitCar.forward": "Avance à tout vitesse.",
+  "RingbitCar.freestyle": "Pour chaque moteur ou roue, détermine le pourcentage de la vitesse maximale (100). \nLa valeur peut être négative. \nEn marche arrière, la vitesse maximale est -100.",
+  "RingbitCar.freestyle|param|m": "Détermine la valeur de m entre -100 (min) et 100 (max). 50, par exemple.",
+  "RingbitCar.freestyle|param|n": "Détermine la valeur de n entre -100 (min) et 100 (max). 50, par exemple.",
+  "RingbitCar.init_wheel": "Active un moteur ou une roue de la voiture ring:bit.",
+  "RingbitCar.init_wheel|param|left": "Broche du moteur ou de la roue à gauche. AnalogPin.P1, par exemple.",
+  "RingbitCar.init_wheel|param|right": "Broche du moteur ou de la roue à droite. AnalogPin.P2, par exemple.",
+  "RingbitCar.ringbitcar_sonarbit": "Détermine l'unité de mesure pour le calcul de la distance. \nLe sonar estime la distance de l'objet devant.",
+  "RingbitCar.tracking": "Suivi de piste.",
+  "RingbitCar.turnleft": "Tourne à gauche à pleine vitesse.",
+  "RingbitCar.turnright": "Tourne à droite à pleine vitesse."
 }
