--- a/_locales/zh-tw/RingbitCar-strings.json
+++ b/_locales/zh-tw/RingbitCar-strings.json
@@ -1,8 +1,8 @@
 {
     "RingbitCar|block": "RingbitCar",
     "RingbitCar.init_wheel|block": "設定左輪連接 %left|右輪連接 %right",
-    "RingbitCar.forward|block": "全速前进",
-    "RingbitCar.back|block": "全速前進",
+    "RingbitCar.forward|block": "全速前進",
+    "RingbitCar.back|block": "全速後退",
     "RingbitCar.turnleft|block": "全速左轉",
     "RingbitCar.turnright|block": "全速右轉",
     "RingbitCar.brake|block": "刹車",
