--- a/_locales/zh-cn/RingbitCar-strings.json
+++ b/_locales/zh-cn/RingbitCar-strings.json
@@ -1,5 +1,5 @@
 {
-    "RingbitCar|block": "RingbitCar",
+    "RingbitCar|block": "瑞比特小车",
     "RingbitCar.init_wheel|block": "设置左轮连接 %left|右轮连接 %right",
     "RingbitCar.forward|block": "全速前进",
     "RingbitCar.back|block": "全速后退",
