--- a/_locales/zh-cn/RingbitCar-strings.json
+++ b/_locales/zh-cn/RingbitCar-strings.json
@@ -1,14 +1,26 @@
 {
-    "RingbitCar|block": "瑞比特小车",
-    "RingbitCar.init_wheel|block": "设置左轮连接 %left|右轮连接 %right",
-    "RingbitCar.forward|block": "全速前进",
-    "RingbitCar.back|block": "全速后退",
-    "RingbitCar.turnleft|block": "全速左转",
-    "RingbitCar.turnright|block": "全速右转",
-    "RingbitCar.brake|block": "刹车",
-    "RingbitCar.freestyle|block": "设置左轮速度为 %m| 右轮速度为 %n",
-    "RingbitCar.tracking|block": "巡线头状态为 %state",
-    "RingbitCar.ringbitcar_sonarbit|block": "超声波测距值 %distance_unit"
-    
+  "RingbitCar.Direction_run.backward|block": "backward",
+  "RingbitCar.Direction_run.forward|block": "forward",
+  "RingbitCar.Direction_turn.left|block": "左",
+  "RingbitCar.Direction_turn.right|block": "右",
+  "RingbitCar.Distance_Unit.Distance_Unit_cm|block": "厘米",
+  "RingbitCar.Distance_Unit.Distance_Unit_inch|block": "英尺",
+  "RingbitCar.Distance_Unit.Distance_Unit_mm|block": "毫米",
+  "RingbitCar.TrackingStateType.Tracking_State_0|block": "● ●",
+  "RingbitCar.TrackingStateType.Tracking_State_1|block": "● ◌",
+  "RingbitCar.TrackingStateType.Tracking_State_2|block": "◌ ●",
+  "RingbitCar.TrackingStateType.Tracking_State_3|block": "◌ ◌",
+  "RingbitCar.back|block": "全速后退",
+  "RingbitCar.brake|block": "刹车",
+  "RingbitCar.forward|block": "全速前进",
+  "RingbitCar.freestyle|block": "设置左轮速度为 %m| 右轮速度为 %n",
+  "RingbitCar.init_wheel|block": "设置左轮连接 %left|右轮连接 %right",
+  "RingbitCar.ringbitcar_sonarbit|block": "超声波测距值 %distance_unit",
+  "RingbitCar.running_distance|block": "向%direction 行驶 %distance 厘米",
+  "RingbitCar.steering_angle|block": "向 %direction 旋转 %angle ",
+  "RingbitCar.tracking|block": "巡线头状态为 %state",
+  "RingbitCar.turnleft|block": "全速左转",
+  "RingbitCar.turnright|block": "全速右转",
+  "RingbitCar|block": "瑞比特小车",
+  "{id:category}RingbitCar": "瑞比特小车"
 }
-
