--- a/_locales/RingbitCar-strings.json
+++ b/_locales/RingbitCar-strings.json
@@ -16,8 +16,8 @@
   "RingbitCar.freestyle|block": "set left wheel speed at %m| right wheel speed at %n",
   "RingbitCar.init_wheel|block": "set left wheel at pin %left|right wheel at pin %right",
   "RingbitCar.ringbitcar_sonarbit|block": "ultrasonic distance in unit %distance_unit",
-  "RingbitCar.running_distance|block": "go%direction to %distance cm",
-  "RingbitCar.steering_angle|block": "spin %angle degrees %direction",
+  "RingbitCar.running_distance|block": "go %direction to %distance cm",
+  "RingbitCar.steering_angle|block": "spin %direction %angle degrees ",
   "RingbitCar.tracking|block": "tracking state is %state",
   "RingbitCar.turnleft|block": "turn left at full speed",
   "RingbitCar.turnright|block": "turn right at full speed",
