Update Japanese translation.

--- a/_locales/ja/RingbitCar-strings.json
+++ b/_locales/ja/RingbitCar-strings.json
@@ -1,13 +1,26 @@
 {
-    "RingbitCar|block": "RingbitCar",
-    "RingbitCar.init_wheel|block": "左の車輪を設置する %left|右の車輪を設置する %right",
-    "RingbitCar.forward|block": "急速な前進",
-    "RingbitCar.back|block": "急速な後ろ向き",
-    "RingbitCar.turnleft|block": "左へ曲がる",
-    "RingbitCar.turnright|block": "右へ曲がる",
-    "RingbitCar.brake|block": "停車",
-    "RingbitCar.freestyle|block": "左の速度を設置する %m| 右の速度を設置する %n",
-    "RingbitCar.tracking|block": "パトロールヘッドを設置%state",
-    "RingbitCar.ringbitcar_sonarbit|block": "超音波測距 %distance_unit"
-    
+  "RingbitCar.Direction_run.backward|block": "後ろ",
+  "RingbitCar.Direction_run.forward|block": "前",
+  "RingbitCar.Direction_turn.left|block": "左",
+  "RingbitCar.Direction_turn.right|block": "右",
+  "RingbitCar.Distance_Unit.Distance_Unit_cm|block": "cm",
+  "RingbitCar.Distance_Unit.Distance_Unit_inch|block": "inch",
+  "RingbitCar.Distance_Unit.Distance_Unit_mm|block": "mm",
+  "RingbitCar.TrackingStateType.Tracking_State_0|block": "● ●",
+  "RingbitCar.TrackingStateType.Tracking_State_1|block": "● ◌",
+  "RingbitCar.TrackingStateType.Tracking_State_2|block": "◌ ●",
+  "RingbitCar.TrackingStateType.Tracking_State_3|block": "◌ ◌",
+  "RingbitCar.back|block": "後進",
+  "RingbitCar.brake|block": "停止",
+  "RingbitCar.forward|block": "前進",
+  "RingbitCar.freestyle|block": "左の車輪のスピードを %m にセット| 右の車輪のスピードを %n にセット",
+  "RingbitCar.init_wheel|block": "左のサーボを %left にセット|右のサーボを %right にセット",
+  "RingbitCar.ringbitcar_sonarbit|block": "距離センサー測定単位を %distance_unit にセット",
+  "RingbitCar.running_distance|block": " %direction に %distance cm 進む",
+  "RingbitCar.steering_angle|block": " %direction に %angle 度曲がる",
+  "RingbitCar.tracking|block": "ライントレース状況が %state",
+  "RingbitCar.turnleft|block": "左へ曲がる",
+  "RingbitCar.turnright|block": "右へ曲がる",
+  "RingbitCar|block": "RingbitCar",
+  "{id:category}RingbitCar": "RingbitCar"
 }
