--- a/_locales/ja/RingbitCar-strings.json
+++ b/_locales/ja/RingbitCar-strings.json
@@ -1,13 +1,26 @@
 {
-    "RingbitCar|block": "RingbitCar",
-    "RingbitCar.init_wheel|block": "左の車輪を設置する %left|右の車輪を設置する %right",
-    "RingbitCar.forward|block": "急速な前進",
-    "RingbitCar.back|block": "急速な後ろ向き",
-    "RingbitCar.turnleft|block": "左へ曲がる",
-    "RingbitCar.turnright|block": "右へ曲がる",
-    "RingbitCar.brake|block": "停車",
-    "RingbitCar.freestyle|block": "左の速度を設置する %m| 右の速度を設置する %n",
-    "RingbitCar.tracking|block": "パトロールヘッドを設置%state",
-    "RingbitCar.ringbitcar_sonarbit|block": "超音波測距 %distance_unit"
-    
+  "RingbitCar.Direction_run.backward|block": "後",
+  "RingbitCar.Direction_run.forward|block": "前",
+  "RingbitCar.Direction_turn.left|block": "左",
+  "RingbitCar.Direction_turn.right|block": "右",
+  "RingbitCar.Distance_Unit.Distance_Unit_cm|block": "cm",
+  "RingbitCar.Distance_Unit.Distance_Unit_inch|block": "インチ",
+  "RingbitCar.Distance_Unit.Distance_Unit_mm|block": "mm",
+  "RingbitCar.TrackingStateType.Tracking_State_0|block": "● ●",
+  "RingbitCar.TrackingStateType.Tracking_State_1|block": "● ◌",
+  "RingbitCar.TrackingStateType.Tracking_State_2|block": "◌ ●",
+  "RingbitCar.TrackingStateType.Tracking_State_3|block": "◌ ◌",
+  "RingbitCar.back|block": "フルスピードで後進",
+  "RingbitCar.brake|block": "動きを止める",
+  "RingbitCar.forward|block": "フルスピードで前進",
+  "RingbitCar.freestyle|block": "左タイヤを %m| の速さ、 |右タイヤを %n の速さで回す",
+  "RingbitCar.init_wheel|block": "左タイヤを %left| にする、 右タイヤを %right にする",
+  "RingbitCar.ringbitcar_sonarbit|block": "超音波センサの値 %unit",
+  "RingbitCar.running_distance|block": "%direction 向きに %distance cm",
+  "RingbitCar.steering_angle|block": "%direction 向きに %angle 度 ",
+  "RingbitCar.tracking|block": "ライントレースセンサが %state",
+  "RingbitCar.turnleft|block": "フルスピードで左折",
+  "RingbitCar.turnright|block": "フルスピードで右折",
+  "RingbitCar|block": "RingbitCar",
+  "{id:category}RingbitCar": "RingbitCar"
 }
